[metadata]
description = A small module to process zgrab2 JSON output files
maintainer = mzpqnxow
maintainer_email = copyright@mzpqnxow.com
author = mzpqnxow
author_email = copyright@mzpqnxow.com
url = https://github.com/mzpqnxow/pyzungrab
name = pyzungrab
requires-python = >=3.5
license-file = COPYING
license = BSD-3-Clause

[versioneer]
parentdir_prefix = 
versionfile_source = zungrab/_version.py
versionfile_build = zungrab/_version.py
VCS = git
style = pep440
tag_prefix = 

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3
install_requires = 

[pep8]
max-line-length = 140

[yapf]
based_on_style = pep8
spaces_before_comment = 2
split_before_logical_operator = true

[pycodestyle]
# select =
ignore = E501,W605

[flake8]
max-line-length = 140
doctests = False
exclude = .git, packages/ , __pycache__, tests/, docs/, build/, dist/, venv/, etc/

[clean]
all = 1